# fhirbase

./: .dockerignore  .env  .gitignore  .travis.yml  Dockerfile  Gopkg.toml  MIT-LICENSE  Makefile  README.md  bulk.go  db.go  dbinit.go  dbinit_test.go  docker-compose.yaml  fhirbase  glide.yaml  go.mod  go.sum  init.go  init_test.go  load.go  load_test.go  main.go  stats.go  stats_test.go  transform.go  transform_test.go  update.go  web.go
data/schema/: fhirbase-1.0.2.sql.json  fhirbase-1.1.0.sql.json  fhirbase-1.6.0.sql.json  fhirbase-1.8.0.sql.json  fhirbase-3.0.1.sql.json  fhirbase-3.2.0.sql.json  fhirbase-dev.sql.json  functions.sql.json
demo/: Dockerfile  deployment.yml  service.yml
dev/: .env
doc/: scenarios.md
docs/: loader.md
init/: fhirbase-1.1.0.sql  fhirbase-1.4.0.sql  fhirbase-1.8.0.sql  fhirbase-3.0.1.sql  fhirbase-3.2.0.sql  functions.sql  run
load/: importer.py  loader.py  requirements.txt  run
old/: docker-compose.yaml
old/goload/: main.go
old/init/: fhirbase-1.0.2.sql  run  (+3 more)
old/rload/: Cargo.toml
pyload/: pyload.py  requirements.txt
rload/: Cargo.toml  README.md
schema/: fhirbase-1.4.0.sql.json  fhirbase-3.3.0.sql.json  fhirbase-4.0.0.sql.json  functions.sql.json
tests/: connection.js  jest.conf.js
transform/: fhirbase-export-1.0.2.json  fhirbase-export-3.2.0.json  fhirbase-export-dev.json  fhirbase-import-1.0.2.json  fhirbase-import-1.6.0.json  fhirbase-import-3.2.0.json  fhirbase-import-3.3.0.json  fhirbase-import-4.0.0.json  fhirbase-import-dev.json
ui/: app.css  app.js  index.html
web/: app.css  app.js  index.html
(+17 files in other folders)
