[package]
name = "pgrust"
version = "0.1.0"
authors = ["niquola <niquola@gmail.com>"]

# https://github.com/pingcap/rust-prometheus
[dependencies]
time = "0.1.12"
regex = "0.1.41"
postgres = "0.15.1"
postgres-binary-copy = "0.5.0"
curl = "0.2.14"
flate2 = "1.0"
json = "0.11.13"
serde_json = "1.0"
streaming-iterator = "0.1.1"